--- a/_config.yml
+++ b/_config.yml
@@ -29,16 +29,10 @@ exclude:
 
 # Jekyll SEO Tag (Optional)
 # =========================
-twitter:
-  username: ngzhio
-  card: summary
 logo: logo.png
 social:
-  name: Shangzhi Huang
+  name: Damocles
   links:
-    - https://twitter.com/ngzhio
-    - https://www.facebook.com/ngzhio
-    - https://github.com/ngzhio
-google_site_verification: u4WXQl0Eu66rsQo2kRdCNx
+    - https://github.com/Damocles
 lang: en
-skin: sunset
+skin: midnight
