--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Democles' blog
-description: A minimal and beautiful Jekyll theme best for writing and note-taking.
-author: Democles
+title: Damocles' blog
+description: Damocles is not a man, but a goodman.
+author: Damocles
 avatar: /logo.png
 email: empty@email.com
 
